--- a/index.html
+++ b/index.html
@@ -1,98 +1,94 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>WebSite</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Bootstrap 4 Website Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <style>
+  .fakeimg {
+    height: 200px;
+    background: #aaa;
+  }
+  </style>
 </head>
-
 <body>
-    <div class= "header">
-				<img src="image/header.png"/>
-    </div>
-	
-	<div>
-		<nav>
-            <ul id="menu">
-                <li><a href="#">ACCEUIL</a></li>
-                <li><a href="#">LE CLUB</a></li>
-                <li><a href="#">INSCRIPTION</a></li>
-                <li><a href="#">NOS PARTENAIRE</a></li>
-                <li><a href="#">CONTACTEZ-NOUS</a></li>
-            </ul>
-        </nav>
-   
-	<h1>Bienvenu sur le site du RFCT !</h1>
-	</div>
-	
-	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <img src="image/header.png"/>
+</div>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <a class="navbar-brand" href="index.html">HOME</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
+
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="https://www.rfct66.fr/index.html">Original Website</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="club.html">Club</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="subscribe.html">Subscribe</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="gallery.php">Gallery</a>
+      </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="partner.html">Partners</a>
+      </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contact</a>
       </li>    
     </ul>
-  </div>  
+  </div> 
 </nav>
 
 <div class="container" style="margin-top:30px">
   <div class="row">
     <div class="col-sm-4">
-      <h2>About Me</h2>
-      <h5>Photo of me:</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
+      <h2>INFORMATION</h2>
+      <h5>Covid-19:</h5>
+        <img src="image/Covid-19-safety.png" width="350" height="400"/>
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      
+      <h2>WELCOME</h2>
+      <h5>Roussillon Football Canohès Toulouges , Sept 28, 2020</h5>
+      <img src="image/training.png" width="750" height="400"/>
+      <p>  Finally, the recovery is possible as of November 28, 2020 !</p>
+      <p>
+      This weekend, the training for our youngest licensees has our full attention and we are doing our best to make it happen in good conditions.
+ 
+And in order to avoid any possible spread of the virus within our structures and to avoid that we are once again deprived of our sport, we ask you to refer to the recommendations made by our educators and to strictly adhere to the protocol that they will put in place.
+ 
+Please help us to do everything we can so that your children can continue to play their favorite sport.
+ 
+Go Roussillon !!!
+      </p>
       <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    </div>
+    <div>
+      <h2>MATCH DAY</h2>
+      <h5>RFCT U15, Aug 26, 2020</h5>
+      <iframe width="565" height="292" src="https://www.youtube.com/embed/GQadFFbGrXc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <video width="565" height="292" controls>
+				<source src="video/canet-en-roussillon.mp4" type="video/mp4">
+			</video>
+      <p>Score: RFCT 2-1 Visitor</p>
     </div>
   </div>
 </div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
+  
   <p>Footer</p>
-</body>
-</html>
+</div>
