--- a/club.html
+++ b/club.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Bootstrap 4 Website Example</title>
+  <title>Homework Web-Programming</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -9,88 +10,128 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <style>
-  .fakeimg {
-    height: 200px;
-    background: #aaa;
-  }
+    .fakeimg {
+      height: 200px;
+      background: #aaa;
+    }
   </style>
 </head>
+
 <body>
 
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <img src="image/header.png"/>
-</div>
+  <div class="jumbotron text-center" style="margin-bottom:0">
+    <img src="image/header.png" />
+  </div>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="index.html">HOME</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="https://www.rfct66.fr/index.html">Original Website</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="club.html">Club</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="subscribe.html">Subscribe</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="gallery.html">Gallery</a>
-      </li> 
-      <li class="nav-item">
-        <a class="nav-link" href="partner.html">Partners</a>
-      </li> 
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>    
-    </ul>
-  </div>  
-</nav>
-
-<div class="container" style="margin-top:30px">
-  <div class="row">
-    <div class="col-sm-4">
-      <h2>ABOUT</h2>
-      <h5>RFCT Club:</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-      <ul class="nav nav-pills flex-column">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="navbar-brand" href="club.html">Club</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="subscribe.html">Subscribe</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link" href="gallery.php">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
-      <hr class="d-sm-none">
     </div>
-    <div class="col-sm-8">
-      <h2>EVENT</h2>
-      <h5>[SOON]Tournament, May 22, 2021</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+  </nav>
+
+  <div class="container" style="margin-top:30px">
+    <div class="row">
+
+      <center>
+        <h1>STORY OF THE CLUB</h1>
+      </center>
       <br>
-      <h2></h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+
+      <p>The Roussillon Football Canohès Toulouges was born from the split of the Pollestres/Canohès agreement (FC
+        Catalan).</p>
+      <br>
+      <p>
+        In 1987, L'entente Toulouges/Canohès filed its statutes with the Prefecture and received an affiliation number
+        for Youth and Sport under the name Roussillon Football Club.
+
+        In 1998, at the request of the municipalities of Toulouges and Canohès, the club associates the names of the two
+        villages and becomes the Roussillon Football Canohès Toulouges as we know it today.
+
+        The efforts made by the volunteers, who succeeded one another in the management of the Club, have allowed its
+        perpetuation and its recognition on the departmental soccer scene.
+        The number of players who have passed through our soccer school and now play in many clubs in the department (at
+        all levels), testifies to the vitality of our training, largely due to the efforts of our educators who have
+        validated their skills by obtaining FFF diplomas.
+
+        In 2004, the soccer school obtained the "FFF label" among the top ten awarded in the department.
+        This recognition is a "token of this recognition".
+      </p>
+      <br>
+      <p>
+        With more than 200 licensees, including more than 180 players, our club is a key player in local community life
+        and therefore important to both villages.
+
+        In addition to the organization of the weekend meetings (at least 3 meetings on the stadiums of Toulouges and
+        Canohès), we organize our rifle of end of the year and several open-air tournaments, in particular our great
+        national tournament "young people" of Pentecost, of which it was the 30th this year 2018.
+
+        Integrated into the U.S.A.T. (Toulouges) and the O.M.S (Canohès), we are also active participants in various
+        local events such as:
+      </p>
+      <br>
+      <p>
+        The forum of the associations of Toulouges and Canohes
+        La Pau y Treva
+        The garage sale
+        The Telethon
+      </p>
+      <br>
+      <p>
+        The only dark side to this picture is that, like many associations, we suffer from a lack of volunteers and the
+        leaders and educators are reaching their limits in terms of supervising our teams and organizing events.
+        Without the participation of the volunteers who are committed to their club and our young people, we could not
+        meet the ever-increasing demand for registrations.
+
+        If you have some time, if you wish to participate in the awakening and learning of young children, do not
+        hesitate, join our team. We will ensure your training.
+
+        If you wish to participate in the organization of events (rifles, tournaments, Christmas snacks ...) we are
+        waiting for you to integrate you into the team of the Club, we can continue to provide our young people with
+        quality supervision.
+
+        If you are just a parent with a licensee and you want to share this hobby with him or her, by giving your time
+        so that his or her activity can continue and be optimal.
+
+        If you wish to support the Club through sponsoring, (advertising, donations...) please contact the club whose
+        contact details can be found in the Contact form!
+      </p>
     </div>
   </div>
-</div>
+  </div>
 
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
-</div>
+  <div class="jumbotron text-center" style="margin-bottom:0">
+    <p>
+      <b>Homework Web-Programming</b>
+      <br>
+      <b>University:</b> Neumann János Egyetem központi oldal
+      <br>
+      <b>Teacher:</b> M. Subecz Zoltán
+      <br>
+      <b>Student:</b> LEDRU Dylan
+      <br>
+      <b>Promotion:</b> 2020-2021
+      <br>
+      <b>Original Website:</b>
+      <a href="https://www.rfct66.fr">RFCT Football Club</a>
+    </p>
+  </div>
+</body>
