--- a/subscribe.html
+++ b/subscribe.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Bootstrap 4 Website Example</title>
+  <title>Homework Web-Programming</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -9,88 +10,90 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <style>
-  .fakeimg {
-    height: 200px;
-    background: #aaa;
-  }
+    .fakeimg {
+      height: 200px;
+      background: #aaa;
+    }
   </style>
 </head>
+
 <body>
 
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <img src="image/header.png"/>
-</div>
+  <div class="jumbotron text-center" style="margin-bottom:0">
+    <img src="image/header.png" />
+  </div>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="index.html">HOME</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="https://www.rfct66.fr/index.html">Original Website</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="club.html">Club</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="subscribe.html">Subscribe</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="gallery.html">Gallery</a>
-      </li> 
-      <li class="nav-item">
-        <a class="nav-link" href="partner.html">Partners</a>
-      </li> 
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>    
-    </ul>
-  </div>  
-</nav>
-
-<div class="container" style="margin-top:30px">
-  <div class="row">
-    <div class="col-sm-4">
-      <h2>About Me</h2>
-      <h5>Photo of me:</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-      <ul class="nav nav-pills flex-column">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="club.html">Club</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="navbar-brand" href="subscribe.html">Subscribe</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link" href="gallery.php">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
-      <hr class="d-sm-none">
     </div>
-    <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+  </nav>
+
+  <div class="container" style="margin-top:30px">
+    <div class="row">
+      <div class="col-sm-8">
+        <h1>Subscribe</h1>
+        <h3>For subscribe to the football club, please download files and follow instructions:</h3>
+        <p></p>
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+            <a class="nav-link active"
+              href="https://www.rfct66.fr/wa_files/plaquette_20modalit_C3_A9s_20inscription_202021.pdf">Subscribe_file_1.pdf</a>
+          </li>
+          <br>
+          <li class="nav-item">
+            <a class="nav-link active"
+              href="https://www.rfct66.fr/wa_files/plaquette_20restauration_20et_20hebergement_202021.pdf">Subscribe_file_2.pdf</a>
+          </li>
+        </ul>
+        <br>
+      </div>
+      <div class="col-sm-8">
+        <h3>[IS COMMING] Tournament Subscription </h3>
+        <p></p>
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Sub_Tournament_2021</a>
+          </li>
+        </ul>
+        <hr class="d-sm-none">
+      </div>
+    </div>
+    <div class="jumbotron text-center" style="margin-bottom:0">
+      <p>
+        <b>Homework Web-Programming</b>
+        <br>
+        <b>University:</b> Neumann János Egyetem központi oldal
+        <br>
+        <b>Teacher:</b> M. Subecz Zoltán
+        <br>
+        <b>Student:</b> LEDRU Dylan
+        <br>
+        <b>Promotion:</b> 2020-2021
+        <br>
+        <b>Original Website:</b>
+        <a href="https://www.rfct66.fr">RFCT Football Club</a>
+      </p>
+
     </div>
   </div>
-</div>
-
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
-</div>
+</body>
